[project]
dependencies = [
    "wxpython~=4.2.1",
    "pyserial~=3.5",
    "numpy~=1.23",
    "tornado~=3.2.1",
    "pint==0.20.1",
    "pillow==10.4.0",
    "six==1.16.0",
]

name = "pyobd2"
version = "1.17"
description = "An OBD-II compliant car diagnostic tool "
authors = [{ "name" = "Jure Poljsak" }, { "name" = "Charles Donour Sizemore" }]
readme = "README.md"
license = "GPL-2.0-only"
requires-python = ">=3.8"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
